--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -16,6 +16,25 @@
   overflow-x: hidden;
   width: $sidebar-width-open;
   transition: width $sidebar-transition-time ease-in-out, left $sidebar-transition-time ease-in-out;
+
+  &::-webkit-scrollbar {
+    height: 8px;
+    width: 4px;
+    background: var(--sidebar-bg-color);
+  }
+
+  &::-webkit-scrollbar-track {
+    background: var(--sidebar-bg-color);
+  }
+
+  &::-webkit-scrollbar-thumb {
+    border: none;
+    background-color: transparent;
+  }
+
+  &:hover::-webkit-scrollbar-thumb {
+    background-color: var(--sidebar-color);
+  }
 }
 
 .sidebarClose .sidebar-wrapper {
