--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -44,18 +44,6 @@
   border-radius: $radius;
 }
 
-@mixin scroll-bar($color) {
-  &::-webkit-scrollbar {
-    height: 8px;
-    width: 4px;
-  }
-
-  &::-webkit-scrollbar-thumb {
-    border: none;
-    background-color: $color;
-  }
-}
-
 @mixin keyframes($name) {
   @-webkit-keyframes #{$name} {
     @content;
